argocd/platform/authentik/prereqs/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: authentik
  namespace: authentik
spec:
  gatewayClassName: cilium
  infrastructure:
    annotations:
      io.cilium/lb-ipam-ips: 192.168.110.231
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      hostname: auth.home.arpa
      allowedRoutes:
        namespaces:
          from: Same
    - name: https
      protocol: HTTPS
      port: 443
      hostname: auth.home.arpa
      tls:
        certificateRefs:
          - group: ""
            kind: Secret
            name: authentik-tls
      allowedRoutes:
        namespaces:
          from: Same
