argocd/platform/authentik/prereqs/redirect-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: authentik-http-redirect
  namespace: authentik
spec:
  parentRefs:
    - name: authentik
      sectionName: http
  hostnames:
    - auth.lab.zerodi.ru
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
